tests/baselines/reference/jsxFactoryNotIdentifierOrQualifiedName2.errors.txt
error TS5067: Invalid value for 'jsxFactory'. 'id1 id2' is not a valid identifier or qualified-name.
tests/cases/compiler/test.tsx(12,5): error TS2304: Cannot find name 'React'.
tests/cases/compiler/test.tsx(13,5): error TS2304: Cannot find name 'React'.


!!! error TS5067: Invalid value for 'jsxFactory'. 'id1 id2' is not a valid identifier or qualified-name.
==== tests/cases/compiler/Element.ts (0 errors) ====
    declare namespace JSX {
        interface Element {
            name: string;
            isIntrinsic: boolean;
            isCustomElement: boolean;
            toString(renderId?: number): string;
            bindDOM(renderId?: number): number;
            resetComponent(): void;
            instantiateComponents(renderId?: number): number;
            props: any;
        }
    }
    export namespace Element {
        export function isElement(el: any): el is JSX.Element {
            return el.markAsChildOfRootElement !== undefined;
        }
    
        export function createElement(args: any[]) {
    
            return {
            }
        }
    }
    
    export let createElement = Element.createElement;
    
    function toCamelCase(text: string): string {
        return text[0].toLowerCase() + text.substring(1);
    }
    
==== tests/cases/compiler/test.tsx (2 errors) ====
    import { Element} from './Element';
    
    let c: {
    	a?: {
    		b: string
    	}
    };
    
    class A {
    	view() {
    		return [
    			<meta content="helloworld"></meta>,
    			 ~~~~
!!! error TS2304: Cannot find name 'React'.
    			<meta content={c.a!.b}></meta>
    			 ~~~~
!!! error TS2304: Cannot find name 'React'.
    		];
    	}
    }